--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mintdrop",
   "version": "1.0.0",
   "description": "dope project",
-  "main": "./index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "./index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
