--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "path": "^0.12.7",
     "point-of-view": "^5.1.0",
