--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "dope project",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,13 +13,17 @@
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "helmet": "^5.0.2",
+    "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "point-of-view": "^5.1.0",
+    "querystring": "^0.2.1",
     "random": "^3.0.6",
     "sass": "^1.49.7",
     "sqlite": "^4.0.23",
