idk what i did lol

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "querystring": "^0.2.1",
     "random": "^3.0.6",
     "sass": "^1.49.7",
+    "solc": "^0.8.12",
+    "solidity": "^0.0.1",
     "sqlite": "^4.0.23",
     "sqlite3": "^4.2.0"
   }
