--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "bootstrap": "^5.1.3",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "curl": "^0.1.4",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "http": "^0.0.1-security",
+    "node-libcurl": "^2.3.4",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "point-of-view": "^5.1.0",
+    "qs": "^6.10.3",
     "querystring": "^0.2.1",
     "random": "^3.0.6",
     "sass": "^1.49.7",
