--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cookie-parser": "^1.4.6",
@@ -26,6 +27,7 @@
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "point-of-view": "^5.1.0",
+    "popups": "^1.1.3",
     "qs": "^6.10.3",
     "querystring": "^0.2.1",
     "random": "^3.0.6",
